--- a/main.css
+++ b/main.css
@@ -19,3 +19,11 @@ h3 {
     font-size:0.9em;
     margin: 0.90em;
 }
+img {
+	height: 50px;
+	width: 100px;
+	border: 2px solid black;
+	border-radius: 5px;
+	display: inline-block;
+	
+}
