--- a/main.css
+++ b/main.css
@@ -20,8 +20,8 @@ h3 {
     margin: 0.90em;
 }
 img {
-	height: 50px;
-	width: 100px;
+	height: 10em;
+	width: 100em;
 	border: 2px solid black;
 	border-radius: 5px;
 	display: inline-block;
