--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 html {
   font-family: arial, sans-serif;
   line-height: 1.15;
+  text-align:center;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -10,10 +11,12 @@ body {
 h1 {
   font-size: 2em;
   margin: 0.20em;
+text-align:center;
 }
 h2 {
     font-size: 1.1em;
     margin: 0.70em;
+    text-align:center;
 }
 h3 {
     font-size:0.9em;
