--- a/main.css
+++ b/main.css
@@ -28,3 +28,9 @@ img {
 	box-shadow: rgba(0,0,0,0.2) 10px 10px;
 
 }
+ul {
+    width:100%;
+    background:red;
+    height:20px;
+    text-align:center;
+}
